data/derived/comb/progs/unify/prog3323.ml.out
Characters 136-137:
  | Sine x -> Printf.sprintf "sin(pi*%s)" x
                                          ^
Error: This expression has type expr but an expression was expected of type
         string
